# BentleyOttmann

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  bentley_ottmann.cpp  generate_data.cpp  main.cpp
src/bentley_ottmann/: CMakeLists.txt
src/bentley_ottmann/begin_case/: CMakeLists.txt  begin_case.cpp
src/bentley_ottmann/begin_case/include/: begin_case.hpp
src/bentley_ottmann/end_case/: CMakeLists.txt  end_case.cpp
src/bentley_ottmann/end_case/include/: end_case.hpp
src/bentley_ottmann/intersection_case/: CMakeLists.txt  intersection_case.cpp
src/bentley_ottmann/intersection_case/include/: intersection_case.hpp
src/comparator/: CMakeLists.txt  comparator.cpp
src/comparator/include/: comparator.hpp
src/find_intersection/: CMakeLists.txt  find_intersection.cpp
src/find_intersection/include/: find_intersection.hpp
src/fraction/: CMakeLists.txt  fraction.cpp
src/fraction/include/: fraction.hpp
src/gcd/: CMakeLists.txt  gcd.cpp
src/gcd/include/: gcd.hpp
src/intersection/: CMakeLists.txt  intersection.cpp
src/intersection/include/: intersection.hpp
src/intersection_info/include/: intersection_info.hpp
src/point/: CMakeLists.txt  point.cpp
src/point/include/: point.hpp
src/queue_item/include/: queue_item.hpp
src/read_data/: CMakeLists.txt  read_data.cpp
src/read_data/include/: read_data.hpp
src/segment/: CMakeLists.txt  segment.cpp
src/segment/include/: segment.hpp
tests/input/: input1.txt  input10.txt  input11.txt  input12.txt  input13.txt  input2.txt  input3.txt  input4.txt  input5.txt  input6.txt  input7.txt  input8.txt  input9.txt
tests/output/: output1.txt  output2.txt  output3.txt  output4.txt  output5.txt  output6.txt  output7.txt  output8.txt
